RESOLVED FIXED116882
Crash in DumpRenderTree at com.apple.WebCore: WebCore::RenderTextTrackCue::repositionGenericCue + 154
https://bugs.webkit.org/show_bug.cgi?id=116882
Summary Crash in DumpRenderTree at com.apple.WebCore: WebCore::RenderTextTrackCue::re...
Jer Noble
Reported 2013-05-28 13:06:14 PDT
Crash in DumpRenderTree at com.apple.WebCore: WebCore::RenderTextTrackCue::repositionGenericCue + 154
Attachments
Patch (1.67 KB, patch)
2013-05-28 13:07 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-05-28 13:07:49 PDT
Jer Noble
Comment 2 2013-05-28 13:17:33 PDT
Note You need to log in before you can comment on or make changes to this bug.