Crash in DumpRenderTree at com.apple.WebCore: WebCore::RenderTextTrackCue::repositionGenericCue + 154 https://bugs.webkit.org/show_bug.cgi?id=116882

Reviewed by Eric Carlson.

Remove an inappropriate assert. No cues coming through repositionGenericCue will be WebVTT ones.

* rendering/RenderTextTrackCue.cpp:
(WebCore::RenderTextTrackCue::repositionGenericCue):

Canonical link: https://commits.webkit.org/135179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150827 268f45cc-cd09-0410-ab3c-d52691b4dbfc